--- a/config/nginx/conf.d/local.conf
+++ b/config/nginx/conf.d/local.conf
@@ -1,19 +1,43 @@
+  # fail_timeout=0 means we always retry an upstream even if it failed
+  # to return a good HTTP response (in case the Unicorn master nukes a
+  # single worker for timing out).
+
 upstream fireborn {
-    server  web:8000;
+    server  web:8000 fail_timeout=0;
 }
+
+log_format custom '$remote_addr - $remote_user [$time_local] '
+                           '"$request" $status $body_bytes_sent '
+                           '"$http_referer" "$http_user_agent" "$gzip_ratio"';
 
 server {
     listen 80;
-    server_name localhost;
+    server_name fireborn;
+    charset     utf-8;
+    client_max_body_size 100M;
 
+    access_log /access.log;
+    error_log /error.log;
+
+    location / {
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+        # Try to serve static files from nginx, no point in making an
+        # *application* server like Unicorn/Rainbows! serve static files.
+        
+        if (!-f $request_filename) {
+            proxy_pass http://fireborn;
+            break;
+        }
+        access_log /fireburn.access.log;
+    }
+    
     location /static/ {
         alias /code/static/;
     }
 
-    location / {
-        proxy_pass http://fireborn;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
+    location /media/ {
+        alias /code/media/;
     }
 }
