- Se modificó docker-compose

--- a/config/nginx/conf.d/local.conf
+++ b/config/nginx/conf.d/local.conf
@@ -10,14 +10,16 @@ log_format custom '$remote_addr - $remote_user [$time_local] '
                            '"$request" $status $body_bytes_sent '
                            '"$http_referer" "$http_user_agent" "$gzip_ratio"';
 
+
 server {
+
     listen 80;
     server_name fireborn;
     charset     utf-8;
     client_max_body_size 100M;
 
-    access_log /access.log;
-    error_log /error.log;
+    access_log /server.access.log  ;
+    error_log /server.error.log  ;
 
     location / {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -30,14 +32,22 @@ server {
             proxy_pass http://fireborn;
             break;
         }
-        access_log /fireburn.access.log;
+        access_log /fireburn.access.log  ;
+        error_log /fireburn.error.log  ;
     }
     
     location /static/ {
+        
+        access_log /static.access.log  ;
+        error_log /static.error.log  ;
         alias /code/static/;
     }
 
     location /media/ {
+        
+        access_log /media.access.log  ;
+        error_log /media.error.log  ;
         alias /code/media/;
     }
+
 }
