--- a/context/db.env
+++ b/context/db.env
@@ -6,3 +6,6 @@ DB_USER ='postgres'
 DB_PASSWORD='postgres'
 DB_HOST ='db'
 DB_PORT = 5432
+
+PGA_EMAIL = 'pgadmin4@gmail.com'
+PGA_PASSWORD = 'root'
