--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Django == 4.1
 whitenoise == 6.4.0
-psycopg2-binary >= 2.9
+psycopg2 >= 2.9.5
+
 gunicorn >= 20.1
 django-bootstrap-v5 == 1.0.11
 django-pwa == 1.1.0
